[package]
name = "studioframe"
version = "1.0.0"
description = "StudioFrame - Prototype viewer for screen recording"
authors = ["Aaron Cougle"]
edition = "2021"

[lib]
name = "studioframe_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
